--- a/src/components/ShowHide/index.css
+++ b/src/components/ShowHide/index.css
@@ -3,7 +3,7 @@
 .bg {
   background-color: linear-gradient(#fa7257, #fc63a7, #fddddb);
   height: 100vh;
-  padding: 20%;
+  padding: 20px;
 }
 .h {
   font-size: 30px;
